# evm-tokenvote

./: .gitignore  Makefile  README.md  README.txt
doc/texinfo/: voting.texi
python/: CHANGELOG  requirements.txt  setup.cfg  test_requirements.txt
python/doc/texinfo/: index.texi  overview.texi  proposal.texi  results.texi  states.texi
python/evm_tokenvote/: __init__.py  voter.py
python/evm_tokenvote/data/: Voter.json  Voter.metadata.json
python/evm_tokenvote/unittest/: base.py
python/tests/: test_base.py  test_cancel.py  test_events.py  test_internal.py  test_option.py  test_protect.py  test_registry.py  test_token.py
solidity/: Makefile  Vote.sol  Vote_fail.sol  Voter.sol
