[metadata]
name = craft-nft
version = 0.2.0
description = A standalone NFT implementation for real-world arts and crafts assets
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://git.defalslfy.org/craft-nft,git
keywords =
	dlt
	blockchain
	cryptocurrency
	ethereum
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Topic :: Software Development :: Libraries
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	Topic :: Internet
#	Topic :: Blockchain :: EVM
license = AGPLv3+
licence_files =
	LICENSE

[options]
include_package_data = True
python_requires = >= 3.7
packages = 
	craft_nft
	craft_nft.runnable

[options.entry_points]
console_scripts =
	craftnft-publish = craft_nft.runnable.publish:main
	craftnft-dump = craft_nft.runnable.dump:main
	craftnft-allocate = craft_nft.runnable.allocate:main
	craftnft-mint = craft_nft.runnable.mint:main
